@@ -1,4 +1,8 @@
 Changes with Apache 2.0.33-dev
+
+  *) Fix segfault and display error when SSLMutex file can not be
+     created.  [Adam Sussman <myddryn@vishnu.vidya.com>]
+
   *) Add reference counting to mod_mem_cache cache objects to
      better manage removing objects from the cache.
      [Bill Stoddard]
